--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Docker Apache Webserver</title>
+    <title>Mein Gruener Docker Webserver</title>
     <style>
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             line-height: 1.6;
             margin: 0;
             padding: 0;
-            background-color: #f5f7fa;
+            background-color: #d4edda; /* Gruener Hintergrund */
             color: #333;
         }
         header {
-            background-color: #2c3e50;
+            background-color: #1e7e34; /* Dunkelgruen fuer den Header */
             color: white;
             padding: 1rem 0;
             text-align: center;
@@ -37,13 +37,13 @@
             color: #fff;
         }
         h2 {
-            color: #2c3e50;
+            color: #1e7e34; /* Gruener Farbton fuer H2 */
             border-bottom: 2px solid #eee;
             padding-bottom: 0.5rem;
         }
         .feature-grid {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            grid-template-columns: repeat(2, 1fr); /* Zwei Kacheln */
             gap: 1.5rem;
             margin-top: 2rem;
         }
@@ -58,11 +58,11 @@
             transform: translateY(-5px);
         }
         .feature-item h3 {
-            color: #3498db;
+            color: #28a745; /* Helles Gruen fuer die Ueberschrift */
             margin-top: 0;
         }
         footer {
-            background-color: #2c3e50;
+            background-color: #1e7e34; /* Dunkelgruen fuer den Footer */
             color: white;
             text-align: center;
             padding: 1rem 0;
@@ -72,32 +72,28 @@
 </head>
 <body>
     <header>
-        <h1>Docker Apache Webserver</h1>
+        <h1>Gruener Docker Webserver</h1>
     </header>
     <div class="container">
         <div class="card">
-            <h2>Willkommen auf meinem Docker Apache Webserver</h2>
-            <p>Diese Webseite läuft in einem Docker Container mit Apache auf Port 8080. Der Container wurde erfolgreich gestartet und die Webseite ist nun über den Browser erreichbar.</p>
-            <p>Dieses Projekt demonstriert die Verwendung von Docker zur Containerisierung eines Webservers mit Apache.</p>
+            <h2>Willkommen auf meinem gruenen Docker Webserver</h2>
+            <p>Diese Webseite wird auf einem Docker Container mit Apache betrieben. Der Container laeuft auf Port 8080 und ist nun im Browser zugänglich.</p>
+            <p>Dieses Projekt zeigt, wie Docker verwendet werden kann, um einen Webserver mit Apache schnell zu erstellen und zu betreiben.</p>
         </div>
-        <h2>Funktionen des Projekts</h2>
+        <h2>Projektmerkmale</h2>
         <div class="feature-grid">
             <div class="feature-item">
                 <h3>Docker Container</h3>
-                <p>Die Anwendung läuft in einem isolierten Docker-Container, der einfach zu verwalten und zu skalieren ist.</p>
+                <p>Die Anwendung laeuft innerhalb eines Docker Containers, was die Verwaltung und Skalierbarkeit erheblich vereinfacht.</p>
             </div>
             <div class="feature-item">
                 <h3>Apache Webserver</h3>
-                <p>Verwendet den zuverlässigen Apache HTTP Server für das Hosting der Webseite.</p>
-            </div>
-            <div class="feature-item">
-                <h3>Volume Mounting</h3>
-                <p>Webseiten-Dateien und Logs werden in lokalen Verzeichnissen gespeichert und in den Container gemountet.</p>
+                <p>Der bewaehrte Apache HTTP Server wird verwendet, um die Webseite zu hosten.</p>
             </div>
         </div>
     </div>
     <footer>
-        <p>&copy; 2025 Docker Apache Webserver Projekt</p>
+        <p>&copy; 2025 Gruener Docker Webserver Projekt</p>
     </footer>
 </body>
 </html>
