--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mein Gruener Docker Webserver</title>
+    <title>Docker Webserver Projekt</title>
     <style>
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -72,28 +72,28 @@
 </head>
 <body>
     <header>
-        <h1>Gruener Docker Webserver</h1>
+        <h1>Docker Webserver Projekt</h1>
     </header>
     <div class="container">
         <div class="card">
-            <h2>Willkommen auf meinem gruenen Docker Webserver</h2>
-            <p>Diese Webseite wird auf einem Docker Container mit Apache betrieben. Der Container laeuft auf Port 8080 und ist nun im Browser zugänglich.</p>
-            <p>Dieses Projekt zeigt, wie Docker verwendet werden kann, um einen Webserver mit Apache schnell zu erstellen und zu betreiben.</p>
+            <h2>Willkommen auf meinem Docker Webserver</h2>
+            <p>Diese Webseite wird in einem Docker Container mit Apache betrieben. Der Container laeuft auf Port 8080 und ist jetzt im Browser erreichbar.</p>
+            <p>Dieses Projekt zeigt, wie Docker verwendet wird, um einen Webserver mit Apache schnell zu starten und zu betreiben.</p>
         </div>
         <h2>Projektmerkmale</h2>
         <div class="feature-grid">
             <div class="feature-item">
                 <h3>Docker Container</h3>
-                <p>Die Anwendung laeuft innerhalb eines Docker Containers, was die Verwaltung und Skalierbarkeit erheblich vereinfacht.</p>
+                <p>Die Anwendung laeuft in einem isolierten Docker Container, der einfach zu verwalten und zu skalieren ist.</p>
             </div>
             <div class="feature-item">
                 <h3>Apache Webserver</h3>
-                <p>Der bewaehrte Apache HTTP Server wird verwendet, um die Webseite zu hosten.</p>
+                <p>Verwendet den Apache HTTP Server, um die Webseite zu hosten.</p>
             </div>
         </div>
     </div>
     <footer>
-        <p>&copy; 2025 Gruener Docker Webserver Projekt</p>
+        <p>&copy; 2025 Docker Webserver Projekt</p>
     </footer>
 </body>
 </html>
